# libluawrap

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  libluawrap.cbp  libluawrap.xml  test.lua
cmake/: BuildMan.cmake  FindGZIP.cmake
include/: libluawrap.h
include/libluawrap/: lua_bool.h  lua_debug.h  lua_defs.h  lua_function.h  lua_nil.h  lua_number.h  lua_string.h  lua_table.h  lua_table_element.h  lua_wrap.h  macros.h
luawrap_test/: basic_export.cpp  main.cpp  object.cpp  readtable.cpp
man/: libluawrap.3  libluawrap.LuaBoolean.3  libluawrap.LuaFunction.3  libluawrap.LuaNil.3  libluawrap.LuaNumber.3  libluawrap.LuaString.3  libluawrap.LuaTable.3  libluawrap.LuaTableElement.3  libluawrap.LuaWrap.3  libluawrap.macros.3
pkgconfig/: libluawrap.pc
scripts/: postinst  postrm
src/: lua_bool.cpp  lua_debug.cpp  lua_function.cpp  lua_luawrap_version.cpp  lua_nil.cpp  lua_number.cpp  lua_string.cpp  lua_table.cpp  lua_table_element.cpp  lua_wrap.cpp  main.cpp
test_scripts/: basic_export.lua  conf.lua  snaffle.lua
